Search box CSS class changes to fix layout issues

--- a/app/assets/stylesheets/orchid.scss
+++ b/app/assets/stylesheets/orchid.scss
@@ -162,28 +162,32 @@ a:focus {
 // =====================
 
 // Search box
-.search_form .searchbox {
+.searchbox {
 
-  .row > div:first-child {
-    margin-bottom: 20px;
-  }
-
-  .panel-heading-link.btn-link {
-    padding: 0;
-    text-decoration: underline;
-
-    &:hover {
-      text-decoration: underline;
-      text-decoration-thickness: 2px;
-    }
-
-    h2 {
-      padding: 0;
-    }
-  }
-
+  // Search field
   .panel-body {
-    padding: 18px;
+
+    .search-text-group {
+      display: flex;
+      flex-wrap: wrap;
+      width: 100%;
+
+      .search-text-field {
+        flex-grow: 1;
+        margin-right: -1px;
+        max-width: 100%;
+      }
+
+      .search-text-button .btn {
+        border-radius: 0;
+      }
+    }
+  }
+
+  // Clear search
+
+  .clear_main_search_text {
+    white-space: initial;
   }
 
   // Search help
@@ -193,18 +197,27 @@ a:focus {
     margin: 0;
 
     .panel-heading-link {
+      border: 0;
+      font-family: $font-family-base;
+      padding: 0;
+      text-decoration: underline;
+
+      &:hover {
+        text-decoration-thickness: 2px;
+      }
 
       > h2.panel-heading {
         background-color: initial;
         border: none;
         border-radius: initial;
         color: inherit; // Use variable for link color
-        display: inline;
+        display: inline-block;
         font-size: 16px;
         margin: 0;
         padding: 0 0 0 5px;
 
         .glyphicon {
+          display: inline-block;
           font-size: 12px;
           margin-left: 5px;
         }
@@ -214,7 +227,7 @@ a:focus {
         }
       }
     }
-    
+
     .panel-body {
       padding: 5px;
 
@@ -239,17 +252,6 @@ a:focus {
   color: $gray-dark;
   background-color: $panel-default-heading-bg;
   border-color: $panel-inner-border;
-}
-
-.searchbox .input-group .form-control:first-child {
-  height: 100%;
-}
-
-.clear_main_search_text {
-  line-height: 1;
-  padding-bottom: 1rem;
-  padding-top: 1rem;
-  white-space: initial;
 }
 
 .panel-filter {
